<resources>
    <string name="app_name">Get Weather</string>
    <string name="title">Get Weather</string>
    <string name="result">Weather</string>
    <string name="des">Description</string>
    <string name="temp">Temperature</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="details">details</string>
    <string name="getit">get it</string>
    <string name="Entercity">Enter your City...</string>
</resources>
